--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.19",
     "@gluestack-ui/themed": "^1.1.34",
+    "@phosphor-icons/react": "^2.1.7",
     "expo": "~52.0.20",
     "expo-font": "~13.0.2",
     "expo-status-bar": "~2.0.0",
+    "phosphor-react-native": "^2.2.2",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-svg": "^15.10.1"
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.3.3"
   },
   "private": true
