--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "expo": "~52.0.20",
     "expo-font": "~13.0.2",
     "expo-status-bar": "~2.0.0",
-    "phosphor-react-native": "^2.2.2",
+    "lucide-react-native": "^0.469.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-svg": "^15.10.1"
+    "react-native-svg": "^15.8.0"
   },
   "devDependencies": {
+    "@react-native-community/cli": "latest",
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "react-native-svg-transformer": "^1.5.0",
