--- a/package.json
+++ b/package.json
@@ -13,19 +13,27 @@
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.19",
     "@gluestack-ui/themed": "^1.1.34",
-    "@phosphor-icons/react": "^2.1.7",    
+    "@phosphor-icons/react": "^2.1.7",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.20",
     "expo-font": "~13.0.2",
     "expo-status-bar": "~2.0.0",
+    "install": "^0.13.0",
     "lucide-react-native": "^0.469.0",
+    "npm": "^11.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "latest",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.3.3"
   },
