--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native": "0.76.5",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
-    "react-native-svg": "^15.8.0"
+    "react-native-svg": "^15.8.0",
+    "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
